se agrego boton de whatsapp

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <div class="contact-links">
         <a class="btn btn-primary" href="mailto:5410m0n.r4m1r3z@gmail.com">Send Email</a>
         <a class="btn btn-ghost" href="https://5410m0n0c001.github.io/INIT-IDEA" target="_blank" rel="noopener noreferrer">Visit Website</a>
+        <a class="btn btn-secondary" href="https://wa.me/527772383264" target="_blank" rel="noopener noreferrer">WhatsApp</a>
       </div>
     </section>
   </main>
