estilos en botones del hero

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="apple-touch-icon" href="assets/logo.png" />
   <link rel="manifest" href="manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css">
 
   <!-- GSAP + ScrollTrigger -->
@@ -59,8 +60,9 @@
         </div>
 
         <nav class="cta-row" aria-label="Primary actions">
-          <a class="btn btn-primary" href="tel:+527772383264" rel="nofollow">CALL: 7772383264</a>
-          <a class="btn btn-secondary" href="contact.vcf" download="INIT-IDEA-contact.vcf">Download vCard</a>
+          <a class="btn btn-primary" href="tel:+527772383264" rel="nofollow"><i class="fas fa-phone"></i> Call Now</a>
+          <a class="btn btn-primary" href="https://wa.me/527772383264" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i> Send WhatsApp</a>
+          <a class="btn btn-secondary" href="contact.vcf" download="INIT-IDEA-contact.vcf" style="background: linear-gradient(90deg, #00FF00, #00AA00); color: #000;"><i class="fas fa-address-book"></i> Add Contact</a>
           <a class="btn btn-cta" href="#contact">Contact</a>
         </nav>
       </div>
