--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <nav class="cta-row" aria-label="Primary actions">
           <a class="btn btn-primary" href="tel:+527772383264" rel="nofollow"><i class="fas fa-phone"></i> Call Now</a>
-          <a class="btn btn-primary" href="https://wa.me/527772383264" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i> Send WhatsApp</a>
+          <a class="btn btn-primary" href="https://wa.me/527772383264?text=Me%20quisiera%20informaci%C3%B3n" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i> Send WhatsApp</a>
           <a class="btn btn-secondary" href="contact.vcf" download="INIT-IDEA-contact.vcf" style="background: linear-gradient(90deg, #00FF00, #00AA00); color: #000;"><i class="fas fa-address-book"></i> Add Contact</a>
           <a class="btn btn-cta" href="#contact">Contact</a>
         </nav>
@@ -106,7 +106,7 @@
       <div class="contact-links">
         <a class="btn btn-primary" href="mailto:5410m0n.r4m1r3z@gmail.com">Send Email</a>
         <a class="btn btn-ghost" href="https://5410m0n0c001.github.io/INIT-IDEA" target="_blank" rel="noopener noreferrer">Visit Website</a>
-        <a class="btn btn-secondary" href="https://wa.me/527772383264" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+        <a class="btn btn-secondary" href="https://wa.me/527772383264?text=Me%20quisiera%20informaci%C3%B3n" target="_blank" rel="noopener noreferrer">WhatsApp</a>
       </div>
     </section>
   </main>
