--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="latest-project-card" data-project="all-in-one-cabo">
           <div class="project-card-bg">
             <video class="project-card-video" autoplay muted loop playsinline preload="metadata" poster="" aria-hidden="true">
-              <source src="assets/c4.mp4" type="video/mp4">
+              <source src="c4.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
@@ -260,7 +260,7 @@
         <div class="latest-project-card" data-project="volkswagen-cresta">
           <div class="project-card-bg">
             <video class="project-card-video" autoplay muted loop playsinline preload="metadata" poster="" aria-hidden="true">
-              <source src="assets/lt.mp4" type="video/mp4">
+              <source src="lt.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
