--- a/index.html
+++ b/index.html
@@ -178,13 +178,34 @@
 
     <!-- Collapsible social media links -->
     <div id="socialDropdown" class="social-dropdown" aria-hidden="true">
-      <a class="social" href="https://www.facebook.com/profile.php?id=61582855106237" target="_blank" rel="noopener noreferrer" aria-label="Visit Facebook page">Facebook</a>
-      <a class="social" href="https://www.instagram.com/alexros2.0/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram profile">Instagram</a>
-      <a class="social" href="https://www.tiktok.com/@alexros2.0" target="_blank" rel="noopener noreferrer" aria-label="Visit TikTok profile">TikTok</a>
-      <a class="social" href="https://youtube.com/@salomonramirezortega?si=7W63IoK4djKSzR3Q" target="_blank" rel="noopener noreferrer" aria-label="Visit YouTube channel">YouTube</a>
-      <a class="social" href="https://www.linkedin.com/in/salomon-ramirez-ortega-b8988a329/" target="_blank" rel="noopener noreferrer" aria-label="Visit LinkedIn profile">LinkedIn</a>
-      <a class="social" href="https://discord.gg/4kHSzxNz" target="_blank" rel="noopener noreferrer" aria-label="Join Discord server">Discord</a>
-      <a class="social" href="https://github.com/5410m0n0c001" target="_blank" rel="noopener noreferrer" aria-label="Visit GitHub profile">GitHub</a>
+      <a class="social" href="https://www.facebook.com/profile.php?id=61582855106237" target="_blank" rel="noopener noreferrer" aria-label="Visit Facebook page">
+        <i class="fab fa-facebook-f" aria-hidden="true"></i>
+        <span>Facebook</span>
+      </a>
+      <a class="social" href="https://www.instagram.com/alexros2.0/" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram profile">
+        <i class="fab fa-instagram" aria-hidden="true"></i>
+        <span>Instagram</span>
+      </a>
+      <a class="social" href="https://discord.gg/4kHSzxNz" target="_blank" rel="noopener noreferrer" aria-label="Join Discord server">
+        <i class="fab fa-discord" aria-hidden="true"></i>
+        <span>Discord</span>
+      </a>
+      <a class="social" href="https://www.linkedin.com/in/salomon-ramirez-ortega-b8988a329/" target="_blank" rel="noopener noreferrer" aria-label="Visit LinkedIn profile">
+        <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+        <span>LinkedIn</span>
+      </a>
+      <a class="social" href="https://x.com/alexros2_0" target="_blank" rel="noopener noreferrer" aria-label="Visit X (Twitter) profile">
+        <i class="fab fa-x-twitter" aria-hidden="true"></i>
+        <span>X (Twitter)</span>
+      </a>
+      <a class="social" href="https://youtube.com/@salomonramirezortega" target="_blank" rel="noopener noreferrer" aria-label="Visit YouTube channel">
+        <i class="fab fa-youtube" aria-hidden="true"></i>
+        <span>YouTube</span>
+      </a>
+      <a class="social" href="https://github.com/5410m0n0c001" target="_blank" rel="noopener noreferrer" aria-label="Visit GitHub profile">
+        <i class="fab fa-github" aria-hidden="true"></i>
+        <span>GitHub</span>
+      </a>
     </div>
 
     <!-- Follow Us legend -->
