--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <title>{INIT /<IDEA>} — Code. Create. Connect.</title>
+  <title>Salomón Ramírez Ortega | INIT IDEA — Tecnología, Creatividad e Innovación Digital</title>
 
   <!-- Optimized meta tags for SEO and social sharing -->
-  <meta name="description" content="{INIT /<IDEA>} — Digital Studio: Web design, development, multimedia, marketing, and consulting." />
-  <meta name="author" content="{INIT /<IDEA>}" />
-  <meta name="keywords" content="web design, development, digital marketing, multimedia, AI integration, technical support" />
+  <meta name="description" content="Desarrollador multidisciplinario y fundador de INIT IDEA, laboratorio creativo enfocado en innovación digital, IA aplicada y diseño tecnológico." />
+  <meta name="author" content="Salomón Ramírez Ortega" />
+  <meta name="keywords" content="Salomón Ramírez Ortega, INIT IDEA, desarrollo web, IA aplicada, diseño digital, innovación tecnológica, automatización inteligente, proyectos prácticos" />
 
-  <!-- Open Graph / Twitter meta (logo.png only used here) -->
-  <meta property="og:title" content="{INIT /<IDEA>} — Code. Create. Connect." />
-  <meta property="og:description" content="We transform ideas into digital experiences." />
-  <meta property="og:image" content="assets/logo.png" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Salomón Ramírez Ortega | INIT IDEA" />
+  <meta property="og:description" content="Desarrollador multidisciplinario y fundador de INIT IDEA, laboratorio creativo enfocado en innovación digital, IA aplicada y diseño tecnológico." />
+  <meta property="og:image" content="https://5410m0n0c001.github.io/INIT-IDEA/assets/logo.png" />
+  <meta property="og:url" content="https://5410m0n0c001.github.io/INIT-IDEA/" />
   <meta property="og:type" content="website" />
-  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale" content="es_MX" />
+  <meta property="og:site_name" content="INIT IDEA" />
 
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="{INIT /<IDEA>} — Code. Create. Connect." />
-  <meta name="twitter:description" content="Digital studio for web design, development, multimedia, and consulting." />
-  <meta name="twitter:image" content="assets/logo.png" />
+  <meta name="twitter:title" content="Salomón Ramírez Ortega | INIT IDEA" />
+  <meta name="twitter:description" content="Tecnología, creatividad e innovación digital con enfoque en proyectos prácticos y automatización inteligente." />
+  <meta name="twitter:image" content="https://5410m0n0c001.github.io/INIT-IDEA/assets/logo.png" />
+  <meta name="twitter:creator" content="@alexros2_0" />
   <meta name="theme-color" content="#00FFFF" />
 
   <!-- Favicon and icons -->
