--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <!-- SPLASH SCREEN - Logo introduction -->
+  <div id="splash-screen" class="splash-screen" role="status" aria-live="polite" aria-label="Loading INIT IDEA">
+    <div class="splash-content">
+      <img src="logo2.0.jpeg" alt="INIT IDEA Logo" class="splash-logo">
+    </div>
+  </div>
+
   <!-- LOADING SCREEN - Optimized for accessibility -->
   <div id="loading-screen" class="loading-screen" role="status" aria-live="polite" aria-label="Loading application">
     <div class="loading-content">
