--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
         <i class="fab fa-github" aria-hidden="true"></i>
         <span>GitHub</span>
       </a>
+      <a class="social" href="https://www.tiktok.com/@alexros2.0" target="_blank" rel="noopener noreferrer" aria-label="Visit TikTok profile">
+        <i class="fab fa-tiktok" aria-hidden="true"></i>
+        <span>TikTok</span>
+      </a>
     </div>
 
     <!-- Follow Us legend -->
