--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <meta name="keywords" content="Salomón Ramírez Ortega, INIT IDEA, desarrollo web, IA aplicada, diseño digital, innovación tecnológica, automatización inteligente, proyectos prácticos" />
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="Salomón Ramírez Ortega | INIT IDEA" />
-  <meta property="og:description" content="Desarrollador multidisciplinario y fundador de INIT IDEA, laboratorio creativo enfocado en innovación digital, IA aplicada y diseño tecnológico." />
-  <meta property="og:image" content="https://5410m0n0c001.github.io/INIT-IDEA/assets/logo.png" />
+  <meta property="og:title" content="Init Idea - Portafolio de Salomón Ramírez" />
+  <meta property="og:description" content="Desarrollador web, analista y creador de soluciones digitales. Explora mis proyectos en Init Idea." />
+  <meta property="og:image" content="https://5410m0n0c001.github.io/INIT-IDEA/logo2.0.png" />
   <meta property="og:url" content="https://5410m0n0c001.github.io/INIT-IDEA/" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="es_MX" />
@@ -26,9 +26,9 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Salomón Ramírez Ortega | INIT IDEA" />
-  <meta name="twitter:description" content="Tecnología, creatividad e innovación digital con enfoque en proyectos prácticos y automatización inteligente." />
-  <meta name="twitter:image" content="https://5410m0n0c001.github.io/INIT-IDEA/assets/logo.png" />
+  <meta name="twitter:title" content="Init Idea - Salomón Ramírez" />
+  <meta name="twitter:description" content="Explora proyectos y experimentos digitales creados por Salomón Ramírez." />
+  <meta name="twitter:image" content="https://5410m0n0c001.github.io/INIT-IDEA/logo2.0.png" />
   <meta name="twitter:creator" content="@alexros2_0" />
   <meta name="theme-color" content="#00FFFF" />
 
