--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <a class="btn btn-primary" href="contact.vcf" download="INIT-IDEA-contact.vcf" aria-label="Download contact information">
             <i class="fas fa-address-book" aria-hidden="true"></i> Add Contact
           </a>
-          <a class="btn btn-cta" href="#contact" aria-label="Go to contact section">Contact</a>
+          <a class="btn btn-cta" href="tel:+527777107522" aria-label="Call studio phone number +52 777 710 7522">Studio phone number</a>
         </nav>
       </div>
     </div>
