--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
       <h3 id="contact-heading">Contact</h3>
       <div class="contact-links">
         <a class="btn btn-primary" href="mailto:5410m0n.r4m1r3z@gmail.com" aria-label="Send email to 5410m0n.r4m1r3z@gmail.com">Send Email</a>
+        <a class="btn btn-primary" href="https://t.me/initidea" target="_blank" rel="noopener noreferrer" aria-label="Send Telegram message">
+          <i class="fab fa-telegram-plane" aria-hidden="true"></i> Send Telegram
+        </a>
 
         <!-- Our Latest Projects Video Buttons - Optimized for performance -->
         <div class="projects-section">
