--- a/index.html
+++ b/index.html
@@ -317,6 +317,26 @@
             </a>
           </div>
         </div>
+
+        <!-- Primavera Events Group Project -->
+        <div class="latest-project-card" data-project="primavera-events">
+          <div class="project-card-bg">
+            <img src="assets/b2.png" alt="Primavera Events Group" class="project-card-image" aria-hidden="true">
+          </div>
+          <div class="project-card-overlay">
+            <div class="project-card-content">
+              <div class="project-icon">
+                <i class="fas fa-calendar-alt" aria-hidden="true"></i>
+              </div>
+              <h3 class="project-title">Primavera Events Group</h3>
+              <p class="project-description">Event planning and management</p>
+            </div>
+            <a href="https://salomonr9.sg-host.com/primavera-events-group/" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Primavera Events Group project">
+              <span>View Project</span>
+              <i class="fas fa-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
